[package]
name = "yahoo_finance_api"
version = "2.0.0-alpha2"
authors = ["Mark Beinker <mwb@quantlink.de>", "Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
description = "A rust adapter for the yahoo! finance API to fetch histories of market data quotes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/yahoo_finance_api"
readme = "README.md"
keywords = ["finance", "yahoo", "stock", "quote"]
categories = ["api-bindings"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde", "serde-human-readable", "macros"] }
async-compat = "0.2"
rust_decimal = { version = "1" }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"]}
